[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-morgan-orm"
version = "0.1.0"
authors = [
  { name="Vicente Gutiérrez", email="gtz.rvera@gmail.com" },
]
description = "A simple and easy-to-use ORM for managing your database queries."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vcgtz/py-morgan-orm"
Issues = "https://github.com/vcgtz/py-morgan-orm/issues"
